Components/CardStacking/Card.module.css
.cardContainer {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  position: sticky;
  top: 0px;
}

.cardContainer .card {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 4.8rem;
  position: relative;
  height: 500px;
  width: 1000px;
  border-radius: 1.15rem;
  transform-origin: top;
  background-color: #121212;
  border: 1px solid #c7c7c73b;

  position: relative;
}

.card::before,
.card::after {
  content: "";
  position: absolute;
  width: 120px;
  height: 120px;
  background-size: contain;
  background-repeat: no-repeat;
  z-index: 5;
  animation: floatUpDown 4s ease-in-out infinite;
  pointer-events: none;
}

.card::before {
  background-image: var(--floating-before-img);
  top: var(--position-before-top);
  right: var(--position-before-right);
}

.card::after {
  background-image: var(--floating-after-img);
  top: var(--position-after-top);
  right: var(--position-after-right);
  animation-delay: 2s;
}

@keyframes floatUpDown {

  0%,
  100% {
    transform: translateY(0px);
  }

  50% {
    transform: translateY(-15px);
  }
}

.card .body {
  color: #fff;
  padding-left: 4.8rem;
}

.card .body .cardHeading {
  text-align: left;
  font-size: 1.75rem;
  letter-spacing: 1px;
  word-spacing: 2px;
  line-height: 125%;
  color: #e0e0e0;
  font-weight: 600;
  margin-bottom: 1.4rem;
}

.card .body .cardDescription {
  color: #bababa;
  margin: 0 auto;
  text-align: left;
  font-size: 1rem;
  letter-spacing: 0.4px;
  word-spacing: 1px;
  line-height: 150%;
  font-weight: 400;
}

.card .body .cardDescription p {
  margin-bottom: 0.75rem;
}

.cardImg {
  height: 100%;
  width: 100%;
  border-radius: 1.15rem;
}

